# ibkr_trade_log

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  config.yaml.dev  ddd.py  docker-compose.yml  encrypted-.env  encrypted-config.yaml  flex.py  main.py  portfolio.py  publish.sh  pyproject.toml  secret.config.yaml  secret.env  util.py
.run/: cli.run.xml  python.run.xml
api/: plugin.py
app/: app.py
bootstrap/logger/: __init__.py
bootstrap/messagebus/: bus.py  handler.py  memory.py  model.py  test_memory.py
bootstrap/rdb/: config.py  repository.py  session.py
flex/: handler.py
ibkr_trade_log/: __init__.py  model.py  portfolio.py
ibkr_trade_log/api/: plugin.py
ibkr_trade_log/app/: app.py
ibkr_trade_log/bootstrap/messagebus/: bus.py  handler.py  memory.py  model.py  test_memory.py
ibkr_trade_log/bootstrap/rdb/: config.py  repository.py  session.py
ibkr_trade_log/cli/: cli.py
ibkr_trade_log/event_log/: __init__.py  handler.py  repository.py
ibkr_trade_log/flex/: __init__.py  cash_transaction.py  handler.py  order.py  transfer.py
ibkr_trade_log/flex/cash_transaction/: handler.py  repository.py
ibkr_trade_log/flex/order/: __init__.py  handler.py  repository.py
ibkr_trade_log/flex/transfer/: handler.py  repository.py
ibkr_trade_log/messagebus/: bus.py  handler.py  memory.py  model.py  test_memory.py
ibkr_trade_log/order/: __init__.py  handler.py  repository.py
ibkr_trade_log/portfolio/: __init__.py  campaign.py  handler.py  portfolio.py
ibkr_trade_log/rdb/: __init__.py  config.py  repository.py  session.py
ibkr_trade_log/scheduler/: scheduler.py
infrastructure/: docker-compose.yml  secret.config.yaml  secret.env
infrastructure/node/: docker-compsoe.yml  traefik.toml
messagebus/: bus.py  handler.py  memory.py  model.py  test_memory.py  util.py
order/: __init__.py  handler.py  repository.py
rdb/: __init__.py  config.py  session.py
reports/: 2020-trade.xml  U2619432_U2619432_20210104_20211231_AF_593562_9b9ee662bfcea5badbe4916d3b3ba9fd.xml  trade_cash_transfer.xml
