[tool.poetry]
name = "ibkr-trade-log"
version = "0.0.0-dev"
description = ""
authors = ["Jiamin Zhu <github@jiamin.io>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.5"
ib-insync = "^0.9.70"
fastapi = "^0.71.0"
uvicorn = {extras = ["standard"], version = "^0.16.0"}
PyYAML = "^6.0"
SQLAlchemy = "^1.4.31"
SQLAlchemy-Utils = "^0.38.2"
Rx = "^3.2.0"
typer = "^0.4.0"

[tool.poetry.dev-dependencies]
psycopg2-binary = "^2.9.3"
pre-commit = "^2.18.1"
pytest = "^7.1.1"
assertpy = "^1.1"
black = "^22.3.0"
pytest-mock = "^3.7.0"
pytest-asyncio = "^0.18.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ibkr-trade-log = "ibkr_trade_log:main"
