[tool.poetry]
name = "ibkr-trade-log"
version = "0.0.0-dev"
description = ""
authors = ["Jiamin Zhu <github@jiamin.io>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.4"
ib-insync = "^0.9.71"
fastapi = "^0.82.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
PyYAML = "^6.0"
SQLAlchemy = "^1.4.31"
SQLAlchemy-Utils = "^0.38.2"
Rx = "^3.2.0"
typer = "^0.6.1"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
pytest = "^7.1.3"
assertpy = "^1.1"
black = "^22.8.0"
pytest-mock = "^3.8.2"
pytest-asyncio = "^0.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ibkr-trade-log = "ibkr_trade_log:main"
